--- a/camel-war/pom.xml
+++ b/camel-war/pom.xml
@@ -9,13 +9,17 @@
     <version>1.0</version>
   </parent>
 
-  <artifactId>samples-fuse-camel-quartz</artifactId>
-  <packaging>jar</packaging>
+  <artifactId>samples-fuse-camel-war</artifactId>
+  <packaging>war</packaging>
 
   <dependencies>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-quartz</artifactId>
+      <artifactId>camel-servlet</artifactId>
     </dependency>
   </dependencies>
 
