--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
         <artifactId>jboss-as-maven-plugin</artifactId>
         <version>7.5.Final</version>
       </plugin>
+      <plugin>
+        <groupId>org.wildfly.plugins</groupId>
+        <artifactId>wildfly-maven-plugin</artifactId>
+        <version>1.1.0.Alpha2</version>
+      </plugin>
     </plugins>
   </build>
 
