--- a/camel-quartz/pom.xml
+++ b/camel-quartz/pom.xml
@@ -11,6 +11,7 @@
 
   <artifactId>samples-fuse-camel-quartz</artifactId>
   <packaging>jar</packaging>
+  <name>JBoss Fuse Samples: Camel Quartz</name>
 
   <dependencies>
     <dependency>
