--- a/camel-war/pom.xml
+++ b/camel-war/pom.xml
@@ -11,6 +11,7 @@
 
   <artifactId>samples-fuse-camel-war</artifactId>
   <packaging>war</packaging>
+  <name>JBoss Fuse Samples: Camel WAR</name>
 
   <dependencies>
     <dependency>
