--- a/camel-quartz/pom.xml
+++ b/camel-quartz/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <artifactId>samples-fuse-camel-quartz</artifactId>
-  <packaging>jar</packaging>
+  <packaging>bundle</packaging>
   <name>JBoss Fuse Samples: Camel Quartz</name>
 
   <dependencies>
