--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
   <modules>
     <module>camel-basic</module>
+    <module>camel-cxf</module>
     <module>camel-quartz</module>
     <module>camel-war</module>
   </modules>
@@ -121,6 +122,12 @@
         <configuration>
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>3.2.0</version>
+        <extensions>true</extensions>
       </plugin>
       <!-- run -->
       <plugin>
