Fix Travis CI build

--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,28 @@
 
   <repositories>
     <repository>
+      <id>jboss-public</id>
+      <name>JBoss Public Repository Group</name>
+      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>jboss-ea-repository</id>
+      <name>JBoss EA Maven Repository Group</name>
+      <url>https://repository.jboss.org/nexus/content/groups/ea/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
       <id>redhat-ga-repository</id>
       <url>https://maven.repository.redhat.com/ga</url>
       <releases>
@@ -172,6 +194,28 @@
     </repository>
   </repositories>
   <pluginRepositories>
+    <pluginRepository>
+      <id>jboss-public</id>
+      <name>JBoss Public Repository Group</name>
+      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>jboss-ea-repository</id>
+      <name>JBoss EA Maven Repository Group</name>
+      <url>https://repository.jboss.org/nexus/content/groups/ea/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </pluginRepository>
     <pluginRepository>
       <id>redhat-ga-repository</id>
       <url>https://maven.repository.redhat.com/ga</url>
